添加依据用户来作为筛选条件的功能。

--- a/vc-web/pom.xml
+++ b/vc-web/pom.xml
@@ -9,7 +9,8 @@
 	<artifactId>vc-web</artifactId>
 	<packaging>pom</packaging>
 	<modules>
-
+		<module>vc-web-manage-api</module>
+		<module>vc-web-manage-srv</module>
 		<module>vc-web-cfg</module>
 		<module>vc-web-demo-api</module>
 		<module>vc-web-demo-srv</module>
