--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<!-- ali -->
 		<druid.version>1.0.18</druid.version>
 		<fastjson.version>1.2.33</fastjson.version>
+		<oss.version>2.8.1</oss.version>
 		<!-- database -->
 		<mysql.version>5.1.42</mysql.version>
 		<!-- apache commons -->
