--- a/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-mqtt-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-mqtt-srv/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>vc-biz-protocol-inf</artifactId>
       <version>${biz.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>1.8.0.RELEASE</version>
+    </dependency>
   </dependencies>
 
 </project>
