1、新部署一个MQTT网关，新增功能：终端在线状态维持；使用到的公共资源：redis； 2、808网关移除mongo依赖，错误信息不转发，新增功能：终端在线状态维持，转发0x01F0，0x7F04，非0x8900的应答0x0001； 3、国标网关优化，错误信息不转发； 4、规则引擎，配置文件订阅TAG新增：JT_01F0||JT_7F04； 5、指令解析，移除众行旧版本指令结果写入redis操作，业务日志记录单条指令执行情况，便于监控单条指令执行时间（更新时间-添加时间），单位毫秒； 6、command-srv 车辆控制，调整 MQTT client maxInflight参数，指令下发时先校验终端是否在线，车辆升级指令仅针对E200车型； 7、日志名调整，当前日志不带日期

--- a/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-mqtt-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-mqtt-srv/pom.xml
@@ -32,9 +32,9 @@
       <version>${biz.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework.data</groupId>
-      <artifactId>spring-data-redis</artifactId>
-      <version>1.8.0.RELEASE</version>
+      <groupId>www.ccclubs</groupId>
+      <artifactId>vc-frm-redis</artifactId>
+      <version>${frm.version}</version>
     </dependency>
   </dependencies>
 
