--- a/vc-frm/vc-frm-phoenix/pom.xml
+++ b/vc-frm/vc-frm-phoenix/pom.xml
@@ -61,6 +61,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
