终端软件版本判空

--- a/vc-env/env/web-front-dev.yml
+++ b/vc-env/env/web-front-dev.yml
@@ -22,7 +22,7 @@ dubbo:
   scan:
     annotationPackage: com.ccclubs
   application:
-    name: command-srv
+    name: web-front
   registry:
     address: zookeeper://127.0.0.1:2181
     protocol: zookeeper
