--- a/vc-web/vc-web-cfg/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-cfg/src/main/resources/bootstrap.yml
@@ -12,12 +12,13 @@ spring:
           #是否暴露加解密接口
           enabled: true
         git:
-          uri: file://D:/NewCheLiZhi/vc
+          uri: http://120.26.220.241/BurningGroup/vc.git
           searchPaths:  vc-env/env
           username: zhangkejiang
           password: ss123456
           #取分支 默认master
-          default-label: niuge
+          default-label: develop-front
+
 
 encrypt:
   keyStore:
