--- a/vc-env/env/quota-srv-dev.yml
+++ b/vc-env/env/quota-srv-dev.yml
@@ -53,5 +53,6 @@ zt:
     url:  jdbc:mysql://121.199.49.206:3306/ccclubs_data_center?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
     username: zkj_user
     password: kANXZYqf2UzghVY7DnjP
+  threadInterval: 0 15 5 * * ?
   updateInterval: 7
   avgDriveTimePerDay: 0.2,1.5,  1.3,2.5,  2.3,3.5,  3.3,6,  5.3,12
