--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,14 @@
 		<jackson.version>2.8.7</jackson.version>
 		<janino.version>3.0.6</janino.version>
 		<!-- JWT -->
-		<jjwt.version>0.7.0</jjwt.version>
+		<jjwt.version>0.9.0</jjwt.version>
 		<!-- autoload-cache -->
 		<autoload-cache.version>6.6</autoload-cache.version>
 		<hessian.version>4.0.38</hessian.version>
 		<!-- Prometheus -->
 		<prometheus.springboot.version>1.0.0</prometheus.springboot.version>
+		<!-- poi -->
+		<poi.version>3.13</poi.version>
 	</properties>
 	<build>
 		<plugins>
@@ -381,6 +383,12 @@
 				<groupId>com.ccclubs</groupId>
 				<artifactId>prometheus-spring-boot-starter</artifactId>
 				<version>${prometheus.springboot.version}</version>
+			</dependency>
+			<!-- poi -->
+			<dependency>
+				<groupId>org.apache.poi</groupId>
+				<artifactId>poi</artifactId>
+				<version>${poi.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
