--- a/vc-biz/vc-biz-mongo-srv/pom.xml
+++ b/vc-biz/vc-biz-mongo-srv/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
-            <artifactId>vc-frm-cache</artifactId>
+            <artifactId>vc-frm-spring</artifactId>
             <version>${frm.version}</version>
         </dependency>
         <dependency>
@@ -29,6 +29,10 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
         </dependency>
     </dependencies>
 
