--- a/vc-env/env/web-front-dev.yml
+++ b/vc-env/env/web-front-dev.yml
@@ -18,14 +18,14 @@ spring:
         username: zkj_user
         password: zkj2017
         database: vc_history
-        authenticationDatabase: history
+        authenticationDatabase: vc_history
       remote:
         host: 114.55.24.97
         port: 3717
         username: zkj_user
         password: zkj2017
         database: vc_remote
-        authenticationDatabase: history
+        authenticationDatabase: vc_remote
 
 dubbo:
   scan:
