--- a/vc-frm/vc-frm-mongo/pom.xml
+++ b/vc-frm/vc-frm-mongo/pom.xml
@@ -20,7 +20,7 @@
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-spring</artifactId>
             <version>${frm.version}</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
