1,分离公共Resolver/IDictMetaData/IMetaData; 2,csLogger/csRemote页面;3,更新layUI

--- a/vc-env/env/cmd-engine-srv-dev.yml
+++ b/vc-env/env/cmd-engine-srv-dev.yml
@@ -6,12 +6,20 @@ spring:
     host: 127.0.0.1
   data:
     mongodb:
-      host: 114.55.24.97
-      port: 3717
-      username: zkj_user
-      password: zkj2017
-      database: history
-      authenticationDatabase: history
+      history:
+        host: 114.55.24.97
+        port: 3717
+        username: zkj_user
+        password: zkj2017
+        database: vc_history
+        authenticationDatabase: vc_history
+      remote:
+        host: 114.55.24.97
+        port: 3717
+        username: zkj_user
+        password: zkj2017
+        database: vc_remote
+        authenticationDatabase: vc_remote
 
 dubbo:
   scan:
