--- a/vc-biz/vc-biz-mongo-inf/pom.xml
+++ b/vc-biz/vc-biz-mongo-inf/pom.xml
@@ -28,6 +28,11 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
