1，解耦指令流水号 2，增加指令-车门落锁（带控制参数）

--- a/vc-biz/vc-biz-command-srv/pom.xml
+++ b/vc-biz/vc-biz-command-srv/pom.xml
@@ -23,7 +23,7 @@
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
-            <artifactId>vc-biz-mongo-orm</artifactId>
+            <artifactId>vc-biz-mongo-srv</artifactId>
             <version>${biz.version}</version>
         </dependency>
         <dependency>
@@ -70,6 +70,10 @@
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
       </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
