--- a/vc-frm/vc-frm-phoenix/pom.xml
+++ b/vc-frm/vc-frm-phoenix/pom.xml
@@ -47,7 +47,7 @@
                     <groupId>javax.servlet</groupId>
                     <artifactId>servlet-api</artifactId>
                 </exclusion>
-                <exclusion>
+                <!--<exclusion>
                     <artifactId>jline</artifactId>
                     <groupId>jline</groupId>
                 </exclusion>
@@ -90,7 +90,7 @@
                 <exclusion>
                     <artifactId>hadoop-mapreduce-client-core</artifactId>
                     <groupId>org.apache.hadoop</groupId>
-                </exclusion>
+                </exclusion>-->
             </exclusions>
         </dependency>
 
