修复了一个愚蠢的错误。回滚了“无用的”代码。

--- a/vc-biz/vc-biz-phoenix-srv/pom.xml
+++ b/vc-biz/vc-biz-phoenix-srv/pom.xml
@@ -37,11 +37,11 @@
             <artifactId>vc-frm-core</artifactId>
             <version>${frm.version}</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-biz-common-srv</artifactId>
             <version>${biz.version}</version>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-biz-pub-orm</artifactId>
