--- a/vc-web/vc-web-front/pom.xml
+++ b/vc-web/vc-web-front/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-biz-mongo-srv</artifactId>
-            <version>${frm.version}</version>
+            <version>${biz.version}</version>
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
