添加MySQL的扫描配置。

--- a/vc-web/vc-web-phoenix-srv/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-phoenix-srv/src/main/resources/bootstrap.yml
@@ -6,3 +6,7 @@ spring:
   cloud:
     config:
       uri: ${spring.cloud.config.uri}
+      
+mybatis:
+  scan:
+    basePackage: com.ccclubs.**.orm.mapper
