任务调度-发邮件

--- a/vc-web/vc-web-schedule/vc-web-job-executor/pom.xml
+++ b/vc-web/vc-web-schedule/vc-web-job-executor/pom.xml
@@ -90,7 +90,11 @@
             <artifactId>vc-biz-job-srv</artifactId>
             <version>${biz.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+            <version>1.5</version>
+        </dependency>
     </dependencies>
 
 
