--- a/vc-env/env/web-front-dev.yml
+++ b/vc-env/env/web-front-dev.yml
@@ -9,7 +9,9 @@ oss:
 
 spring:
   redis:
-    host: 127.0.0.1
+    host: 118.178.229.234
+    port: 63791
+    database: 7
   data:
     mongodb:
       history:
