--- a/vc-web/vc-web-schedule/vc-web-job-admin/src/main/resources/xxl-job-admin.properties
+++ b/vc-web/vc-web-schedule/vc-web-job-admin/src/main/resources/xxl-job-admin.properties
@@ -1,19 +1,19 @@
 ### xxl-job db  (use &amp; replace & in xml)
 xxl.job.db.driverClass=com.mysql.jdbc.Driver
-xxl.job.db.url=jdbc:mysql://localhost:3306/xxl-job?useUnicode=true&characterEncoding=UTF-8
-xxl.job.db.user=jhy
-xxl.job.db.password=mysql
+xxl.job.db.url=jdbc:mysql://121.199.49.206:3306/ccclubs_data_center?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+xxl.job.db.user=zkj_user
+xxl.job.db.password=kANXZYqf2UzghVY7DnjP
 
 ### xxl-job email
-xxl.job.mail.host=smtp.qq.com
+xxl.job.mail.host=smtp.mxhichina.com
 xxl.job.mail.port=25
-xxl.job.mail.username=1262684802@qq.com
-xxl.job.mail.password=000000123
-xxl.job.mail.sendNick=《任务调度平台》
+xxl.job.mail.username=jianghaiyang@ccclubs.com
+xxl.job.mail.password=-ccpose1130
+xxl.job.mail.sendNick=《任务调度中心》
 
 ### xxl-job login
 xxl.job.login.username=admin
-xxl.job.login.password=123456
+xxl.job.login.password=!job@123
 
 ### xxl-job, access token
 xxl.job.accessToken=
