--- a/vc-biz/vc-biz-quota-srv/pom.xml
+++ b/vc-biz/vc-biz-quota-srv/pom.xml
@@ -78,5 +78,10 @@
       <artifactId>vc-biz-mongo-orm</artifactId>
       <version>${frm.version}</version>
     </dependency>
+    <dependency>
+      <groupId>www.ccclubs</groupId>
+      <artifactId>vc-biz-protocol-inf</artifactId>
+      <version>${biz.version}</version>
+    </dependency>
   </dependencies>
 </project>
