--- a/vc-frm/vc-frm-phoenix/pom.xml
+++ b/vc-frm/vc-frm-phoenix/pom.xml
@@ -19,7 +19,11 @@
             <scope>provided</scope>
         </dependency>
 
-
+        <!--<dependency>
+            <groupId>org.apache.phoenix</groupId>
+            <artifactId>phoenix-core</artifactId>
+            <version>4.13.1-HBase-1.1</version>
+        </dependency>-->
 
         <dependency>
             <groupId>com.aliyun.phoenix</groupId>
