--- a/vc-biz/vc-biz-mongo-inf/pom.xml
+++ b/vc-biz/vc-biz-mongo-inf/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>persistence-api</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-annotation</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
