--- a/vc-frm/pom.xml
+++ b/vc-frm/pom.xml
@@ -26,5 +26,6 @@
         <module>vc-frm-phoenix</module>
         <module>vc-frm-oss</module>
         <module>vc-frm-mongo</module>
+        <module>vc-frm-influxdb</module>
     </modules>
 </project>
