--- a/vc-biz/vc-biz-influxdb-inf/pom.xml
+++ b/vc-biz/vc-biz-influxdb-inf/pom.xml
@@ -10,24 +10,19 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>vc-biz-influxdb-inf</artifactId>
-    <properties>
-        <spring-data-influxdb.version>1.6</spring-data-influxdb.version>
-        <influxdb-java.version>2.8</influxdb-java.version>
-
-    </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.github.miwurster</groupId>
-            <artifactId>spring-data-influxdb</artifactId>
-            <version>${spring-data-influxdb.version}</version>
-        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>2.9.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-influxdb</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
