修改Phoenix-srv内存泄漏问题。

--- a/vc-web/vc-web-phoenix-api/pom.xml
+++ b/vc-web/vc-web-phoenix-api/pom.xml
@@ -64,6 +64,11 @@
             <version>${frm.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-vehicle-inf</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
 
     </dependencies>
