--- a/vc-biz/vc-biz-phoenix-srv/pom.xml
+++ b/vc-biz/vc-biz-phoenix-srv/pom.xml
@@ -37,11 +37,11 @@
             <artifactId>vc-frm-core</artifactId>
             <version>${frm.version}</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-biz-common-srv</artifactId>
             <version>${biz.version}</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-biz-pub-orm</artifactId>
@@ -62,6 +62,11 @@
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-logger</artifactId>
             <version>${frm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-vehicle-inf</artifactId>
+            <version>${biz.version}</version>
         </dependency>
     </dependencies>
 
