--- a/vc-frm/vc-frm-influxdb/pom.xml
+++ b/vc-frm/vc-frm-influxdb/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>vc-frm-influxdb</artifactId>
     <properties>
         <spring-data-influxdb.version>1.6</spring-data-influxdb.version>
-        <influxdb-java.version>2.8</influxdb-java.version>
+        <influxdb-java.version>2.9</influxdb-java.version>
         <okio.version>1.13.0 </okio.version>
     </properties>
     <dependencies>
@@ -20,11 +20,34 @@
             <groupId>com.github.miwurster</groupId>
             <artifactId>spring-data-influxdb</artifactId>
             <version>${spring-data-influxdb.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>influxdb-java</artifactId>
+                    <groupId>org.influxdb</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.influxdb</groupId>
             <artifactId>influxdb-java</artifactId>
             <version>${influxdb-java.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>okio</artifactId>
+                    <groupId>com.squareup.okio</groupId>
+                </exclusion>
+            </exclusions>
+
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okio</groupId>
+            <artifactId>okio</artifactId>
+            <version>1.13.0</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-core</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
     </dependencies>
