迁出Phoenix-srv当中的存储服务，调整为单独模块。清理Phoenix中的写入代码。

--- a/vc-biz/pom.xml
+++ b/vc-biz/pom.xml
@@ -39,5 +39,7 @@
         <module>vc-biz-pub-model</module>
         <module>vc-biz-influxdb-srv</module>
         <module>vc-biz-influxdb-inf</module>
+        <module>vc-biz-storage-inf</module>
+        <module>vc-biz-storage-srv</module>
     </modules>
 </project>
