--- a/vc-web/pom.xml
+++ b/vc-web/pom.xml
@@ -23,7 +23,9 @@
         <module>vc-web-front</module>
         <module>vc-web-phoenix-api</module>
 		<module>vc-web-phoenix-srv</module>
-	</modules>
+		<!--<module>vc-web-test-app</module>-->
+        <module>vc-web-storage-srv</module>
+    </modules>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
