迁移CsMessage的位置。

--- a/vc-env/env/test-api-dev.yml
+++ b/vc-env/env/test-api-dev.yml
@@ -62,9 +62,10 @@ dubbo:
 
 spring:
   redis:
-    host: 118.178.229.234
-    port: 63791
-    database: 7
+    host: 127.0.0.1
+#    host: 118.178.229.234
+#    port: 63791
+#    database: 7
   http:
     encoding:
       charset: UTF-8
