--- a/vc-biz/vc-biz-storage-srv/pom.xml
+++ b/vc-biz/vc-biz-storage-srv/pom.xml
@@ -29,7 +29,7 @@
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
-            <artifactId>vc-biz-pub-orm</artifactId>
+            <artifactId>vc-biz-pub-model</artifactId>
             <version>${biz.version}</version>
         </dependency>
         <dependency>
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-phoenix</artifactId>
-            <version>${frm.version}</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
