--- a/vc-biz/vc-biz-storage-srv/pom.xml
+++ b/vc-biz/vc-biz-storage-srv/pom.xml
@@ -40,8 +40,9 @@
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-phoenix</artifactId>
-            <version>1.0.0</version>
+            <version>${frm.version}</version>
         </dependency>
+
     </dependencies>
 
 
