--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.5.RELEASE</version>
+		<version>1.5.4.RELEASE</version>
 	</parent>
 	<groupId>www.ccclubs</groupId>
 	<artifactId>vc</artifactId>
@@ -79,6 +79,8 @@
 		<poi.version>3.15</poi.version>
 		<!--netty-->
 		<netty.version>4.1.15.Final</netty.version>
+		<!--kafka-->
+		<kafka.version>1.3.0.RELEASE</kafka.version>
 	</properties>
 	<build>
 		<plugins>
@@ -391,6 +393,12 @@
 				<groupId>org.apache.poi</groupId>
 				<artifactId>poi</artifactId>
 				<version>${poi.version}</version>
+			</dependency>
+			<!--kafka-->
+			<dependency>
+				<groupId>org.springframework.kafka</groupId>
+				<artifactId>spring-kafka</artifactId>
+				<version>${kafka.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
