--- a/vc-biz/vc-biz-message/vc-biz-rule-engine-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-rule-engine-srv/pom.xml
@@ -90,6 +90,11 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
+        <!--kafka-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
