历史数据的obd里程空值判断

--- a/vc-env/env/storage-srv-dev.yml
+++ b/vc-env/env/storage-srv-dev.yml
@@ -8,17 +8,15 @@ server:
 spring:
   redis:
     host: 127.0.0.1
-#    host: 118.178.229.234
-#    port: 63791
-#    database: 7
+
   aop:
     proxyTargetClass: true
 
 dubbo:
   scan:
-    annotationPackage: com.ccclubs
+    annotationPackage: com.ccclubs.storage
   application:
-    name: srv
+    name: storage-srv
   registry:
     address: 127.0.0.1:2181
     protocol: zookeeper
