--- a/vc-biz/vc-biz-storage-srv/pom.xml
+++ b/vc-biz/vc-biz-storage-srv/pom.xml
@@ -11,12 +11,13 @@
 
     <artifactId>vc-biz-storage-srv</artifactId>
     <dependencies>
+        <!--biz-->
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-biz-storage-inf</artifactId>
             <version>${biz.version}</version>
         </dependency>
-
+        <!--frm-->
         <dependency>
             <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-redis</artifactId>
@@ -42,7 +43,11 @@
             <artifactId>vc-frm-phoenix</artifactId>
             <version>${frm.version}</version>
         </dependency>
-
+        <!--Kafka-->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
     </dependencies>
 
 
