--- a/vc-biz/vc-biz-storage-srv/pom.xml
+++ b/vc-biz/vc-biz-storage-srv/pom.xml
@@ -20,6 +20,11 @@
         <!--frm-->
         <dependency>
             <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-core</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-redis</artifactId>
             <version>${frm.version}</version>
         </dependency>
