--- a/vc-env/env/storage-srv-dev.yml
+++ b/vc-env/env/storage-srv-dev.yml
@@ -15,11 +15,8 @@ spring:
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       max-poll-records: 500
       enable-auto-commit: true
-      auto-commit-interval: 100
+      auto-commit-interval: 1000
       auto-offset-reset: latest
-    listener:
-      poll-timeout: 3000
-      concurrency: 5
 
 #kafka topic
 kafka:
@@ -29,6 +26,8 @@ kafka:
   topic:
     history:
       gbmessage: topic_gb_message
+      cscan: topic_cs_can
+      csstate: topic_cs_state
 
 dubbo:
   scan:
