web-front添加api日志，为前端开发去除token校验

--- a/vc-web/vc-web-front/pom.xml
+++ b/vc-web/vc-web-front/pom.xml
@@ -34,6 +34,11 @@
         </dependency>
         <dependency>
             <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-swagger</artifactId>
+            <version>${frm.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
             <artifactId>vc-frm-dubbox</artifactId>
             <version>${frm.version}</version>
         </dependency>
