--- a/vc-env/env/vtsearch-srv-dev.yml
+++ b/vc-env/env/vtsearch-srv-dev.yml
@@ -47,7 +47,7 @@ dubbo:
 druid:
   driver: com.mysql.jdbc.Driver
   jdbc:
-    url: jdbc:mysql://121.199.49.206:3306/vc_data?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+    url: jdbc:mysql://121.199.49.206:3306/ccclubs_data_center?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
     username: zkj_user
     password: kANXZYqf2UzghVY7DnjP
   initialSize: 2
