--- a/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-gb-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-gb-srv/pom.xml
@@ -27,6 +27,43 @@
       <artifactId>vc-frm-mqtt</artifactId>
       <version>1.0.0</version>
     </dependency>
+
+      <!--引入SpringBoot基础依赖-->
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-web</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-test</artifactId>
+          <scope>test</scope>
+      </dependency>
+      <!-- servlet 容器 -->
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-undertow</artifactId>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+      <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-all</artifactId>
+          <version>4.1.12.Final</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/javax.persistence/persistence-api -->
+      <dependency>
+          <groupId>javax.persistence</groupId>
+          <artifactId>persistence-api</artifactId>
+          <version>1.0</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.4</version>
+      </dependency>
   </dependencies>
 
 </project>
