--- a/vc-env/env/gateway-gb-srv-dev.yml
+++ b/vc-env/env/gateway-gb-srv-dev.yml
@@ -1,55 +1,18 @@
-server:
-  port: 8901
-
-dubbo:
-  scan:
-    annotationPackage: com.ccclubs
-  application:
-    name: gateway-gb-srv
-  registry:
-    address: zookeeper://127.0.0.1:2181
-    protocol: zookeeper
-    port: 21001
-  protocol:
-    name: dubbo
-    threads: 100
-    #host: 10.0.10.96
-    port: 20880
-  provider:
-    timeout: 120000
-    retries: -1
-  consumer:
-    timeout: 120000
-    check: false
-
-#国标网关转发到MQ的topic
-mq:
-  topic: ser_test
-#国标网关监听的端口
-gbServer:
+tcp:
   port: 27700
-#socket最大空闲时间，单位秒
-  maxOfflineTime: 720
+boss:
+  thread:
+    count: 2
+worker:
+  thread:
+    count: 4
+#true: 连接复用；false：每次新建一个连接
+so:
+  keepalive: false
+  backlog: 100
 
-#阿里云 MQ 配置
-ons:
-  producerId: PID_terminal_ser
-  accessKey: M6dHCyKyKYUCNbW4
-  secretKey: k6gOSH3dNJjFYze4CuxbBWS1PWqvVk
+#kafka生产者配置
 
-mqttAliyun:
-  #阿里云 mqtt broker 地址
-  host: tcp://mqtt.cn-hangzhou.aliyuncs.com
-  #阿里云 mqtt broker 端口
-  port: 1883
-  #阿里云 mqClient ID 前缀
-  preId: GID_pro
-  #阿里云用户名
-  userName: M6dHCyKyKYUCNbW4
-  #阿里云密码
-  pwd: 2u0w1llRPSxKeNSZDq95jQAE95c=
-  #订阅主题
-  subTopic: protocol/gb/#
-  #是否记录上行记录
-  logUpDown: true
+
+
 
