--- a/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-gb-srv/pom.xml
+++ b/vc-biz/vc-biz-message/vc-biz-gateway/vc-biz-gateway-gb-srv/pom.xml
@@ -64,6 +64,13 @@
           <artifactId>commons-lang3</artifactId>
           <version>3.4</version>
       </dependency>
+
+      <!--kafka-->
+      <dependency>
+          <groupId>org.springframework.kafka</groupId>
+          <artifactId>spring-kafka</artifactId>
+          <version>${kafka.version}</version>
+      </dependency>
   </dependencies>
 
 </project>
