--- a/vc-env/env/web-front-dev.yml
+++ b/vc-env/env/web-front-dev.yml
@@ -29,6 +29,23 @@ spring:
         password: zkj2017
         database: vc_remote
         authenticationDatabase: vc_remote
+  kafka:
+    bootstrap-servers: 127.0.0.1:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+
+#kafka 车辆上线离线 topic
+kafka:
+  topic:
+    gateway:
+      conn: topic_conn_status
+
+#阿里云 MQ 配置
+ons:
+  producerId: PID_terminal_ser
+  accessKey: M6dHCyKyKYUCNbW4
+  secretKey: k6gOSH3dNJjFYze4CuxbBWS1PWqvVk
 
 dubbo:
   scan:
@@ -77,3 +94,4 @@ email:
 
 filedisk:
   path: /opt/vc_folder/
+
