1,规则引擎 csCan、csState加入iccid、mobile、teNo;2,mapping加入iccid;3,规则引擎分流异常数据（vin缺失）转发到kafka异常通道;4,规则引擎增加消费者-GB网关全量数据监听处理;5,规则引擎分离808位置数据转发kafka;

--- a/vc-env/env/rule-engine-srv-dev.yml
+++ b/vc-env/env/rule-engine-srv-dev.yml
@@ -71,7 +71,12 @@ kafka:
     history: #OUT 发送到下游
       csmessage: topic_cs_message
       cscan: topic_cs_can
+      cscan-exp: topic_cs_can_exp
       csstate: topic_cs_state
+      csstate-exp: topic_cs_state_exp
+      jt808:
+        position: topic_jt_position
+        position-exp: topic_jt_position_exp
 
 ccclubs:
   data:
